# sophia-core

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  Makefile  README.md  config.yaml  cov.xml  docker-compose.yml  mypy.ini  poe_tasks.toml  pyproject.toml  pytest.ini  report.xml  ruff.toml  semantic.toml
.github/workflows/: dev-ci.yaml  main-ci.yaml
asset/prompts/: eventgpt_prompt.yaml
src/sophia/: main.py
src/sophia/app/api/: deps.py  routers.py
src/sophia/app/api/endpoints/: base.py  chat.py  health.py  session.py  tool.py  user.py
src/sophia/app/services/: inference_service.py  model_interaction.py  session_service.py
src/sophia/app/utils/: constant.py  events.py  security.py
src/sophia/common/: config.py  decorator.py  logging.py  util.py
src/sophia/common/model/: user.py
src/sophia/core/agent/: agent.py  base.py  factory.py  memory.py  store.py
src/sophia/core/agent/tools/: localtime.py  weather.py
src/sophia/core/db/: models.py  session.py
src/sophia/core/db/crud/: __init__.py  crud_user.py  session_crud.py
src/sophia/core/model/: base.py  message.py  tool.py  user.py
tests/: __init__.py  conftest.py
tests/api/: test_agent.py  test_user.py
